Update dependencies to latest versions.

--- a/composer.json
+++ b/composer.json
@@ -40,20 +40,20 @@
     "drupal/config_sync_without_site_uuid": "^1.0@beta",
     "drupal/crop": "^2.4",
     "drupal/dashboard": "^2.0",
-    "drupal/diff": "^1.8",
+    "drupal/diff": "^2.0@beta",
     "drupal/easy_breadcrumb": "^2.0",
     "drupal/eca": "^2.1",
     "drupal/editor_advanced_link": "^2.2",
-    "drupal/environment_indicator": "^4.0",
+    "drupal/environment_indicator": "^4.1@beta",
     "drupal/extlink": "^2.0",
-    "drupal/field_group": "^3.6",
+    "drupal/field_group": "^4.0",
     "drupal/filefield_paths": "^1.0@beta",
     "drupal/focal_point": "^2.1",
     "drupal/gin": "^5.0",
     "drupal/gin_lb": "^3.0@beta",
     "drupal/google_tag": "^2.0",
     "drupal/hreflang": "^1.15",
-    "drupal/imagemagick": "^4.0",
+    "drupal/imagemagick": "^4.1@RC",
     "drupal/jquery_ui_resizable": "^2.1",
     "drupal/layout_builder_lock": "^2.0@RC",
     "drupal/layout_builder_modal": "^2.0",
@@ -67,7 +67,7 @@
     "drupal/media_entity_file_replace": "^1.3",
     "drupal/menu_link_attributes": "^1.5",
     "drupal/metatag": "^2.1",
-    "drupal/moderated_content_bulk_publish": "^2.0",
+    "drupal/moderated_content_bulk_publish": "^3.0@beta",
     "drupal/paragraphs": "^1.18",
     "drupal/pathauto": "^1.13",
     "drupal/pathologic": "^2.0@alpha",
