Added new Packages necessary for Site Building.

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,10 @@
   ],
   "require": {
     "drupal/add_content_by_bundle": "^1.2",
+    "drupal/autologout": "^2.0",
     "drupal/autosave_form": "^1.8",
     "drupal/better_exposed_filters": "^7.1@beta",
+    "drupal/blazy": "^3.0",
     "drupal/block_class": "*",
     "drupal/bpmn_io": "^2.0",
     "drupal/checklistapi": "^2.1",
@@ -48,6 +50,7 @@
     "drupal/extlink": "^2.0",
     "drupal/field_group": "^4.0",
     "drupal/filefield_paths": "^1.0@beta",
+    "drupal/flood_control": "^3.0",
     "drupal/focal_point": "^2.1",
     "drupal/gin": "^5.0",
     "drupal/gin_lb": "^3.0@beta",
@@ -55,6 +58,7 @@
     "drupal/hreflang": "^1.15",
     "drupal/imagemagick": "^4.1@RC",
     "drupal/jquery_ui_resizable": "^2.1",
+    "drupal/layoutbuilder_search_api": "^1.0",
     "drupal/layout_builder_lock": "^2.0@RC",
     "drupal/layout_builder_modal": "^2.0",
     "drupal/layout_builder_restrictions": "^3.0",
@@ -81,6 +85,11 @@
     "drupal/search404": "^2.2@RC",
     "drupal/search_api": "^1.37",
     "drupal/search_api_exclude": "^2.0",
+    "drupal/search_api_exclude_entity": "^3.0",
+    "drupal/search_api_pantheon": "^8.3",
+    "drupal/search_api_solr": "^4.3",
+    "drupal/smart_trim": "^2.2",
+    "drupal/stage_file_proxy": "^3.1",
     "drupal/seckit": "^2.0",
     "drupal/selective_better_exposed_filters": "^3.0",
     "drupal/simple_sitemap": "^4.2",
